--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,40 @@ services:
       - "6379:6379"
   notebook:
     image: ampsersandlabs/houdini
+    command: ./start_notebook.sh
     build: .
     volumes:
       - .:/app
     ports:
       - "8888:8888"
+    env_file: .env
+    links:
+      - mongo
+      - redis
+    depends_on:
+      - mongo
+      - redis
+  api:
+    image: ampsersandlabs/houdini-api
+    build: .
+    command: python houdini/api.py
+    volumes:
+      - .:/app
+    ports:
+      - "5000:5000"
+    env_file: .env
+    links:
+      - mongo
+      - redis
+    depends_on:
+      - mongo
+      - redis
+  fetcher:
+    image: ampsersandlabs/houdini-fetcher
+    build: .
+    command: python houdini/fetch_data.py
+    volumes:
+      - .:/app
     env_file: .env
     links:
       - mongo
