--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - .:/app
     ports:
       - "8888:8888"
+    environment:
+      - NLTK_DATA=/app/bin/nltk_data/
     env_file: .env
     links:
       - mongo
@@ -31,14 +33,14 @@ services:
       - mongo
     depends_on:
       - mongo
-  fetcher:
-    image: ampsersandlabs/houdini-fetcher
-    build: .
-    command: python houdini/fetch_data.py
-    volumes:
-      - .:/app
-    env_file: .env
-    links:
-      - mongo
-    depends_on:
-      - mongo
+  # fetcher:
+  #   image: ampsersandlabs/houdini-fetcher
+  #   build: .
+  #   command: python houdini/fetch_data.py
+  #   volumes:
+  #     - .:/app
+  #   env_file: .env
+  #   links:
+  #     - mongo
+  #   depends_on:
+  #     - mongo
