--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,7 +8,7 @@ services:
   api:
     image: ampsersandlabs/houdini-api
     build: .
-    command: python houdini/api.py
+    command: python houdini/api/api.py
     volumes:
       - .:/app
     ports:
