--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
 Flask==0.12.2
-nltk==3.2.5
+flask-bcrypt==0.7.1
+Flask-Session==0.3.1
 requests==2.18.4
+nltk==3.2.5
 textblob==0.15.1
 twython==3.6.0
 rq==0.10.0
+-e git+https://github.com/clips/pattern.git@ec95f97b2e34c2232e7c43ef1e34e3f0dea6654b#egg=Pattern
 redis==2.10.6
 numpy==1.14.2
 matplotlib==2.2.2
 scipy==1.0.0
 pandas==0.22.0
 scikit-learn==0.19.1
+tensorflow==1.7.0
 jupyter==1.0.0
-scrapy==1.5.0
-tensorflow==1.6.0
 pymongo==3.6.1
 PyJWT==1.6.1
-flask-bcrypt==0.7.1
-Flask-Session==0.3.1
-pattern3==3.0.0
