--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -13,19 +13,21 @@ services:
       - .:/app
     ports:
       - "5000:5000"
+    environment:
+      - NLTK_DATA=/app/bin/nltk_data/      
     env_file: .env
     links:
       - mongo
     depends_on:
       - mongo
-  # fetcher:
-  #   image: ampsersandlabs/houdini-fetcher
-  #   build: .
-  #   command: python houdini/fetch_data.py
-  #   volumes:
-  #     - .:/app
-  #   env_file: .env
-  #   links:
-  #     - mongo
-  #   depends_on:
-  #     - mongo
+  fetcher:
+    image: ampsersandlabs/houdini-fetcher
+    build: .
+    command: python houdini/fetch_data.py
+    volumes:
+      - .:/app
+    env_file: .env
+    links:
+      - mongo
+    depends_on:
+      - mongo
