--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - .:/app
     ports:
       - "5000:5000"
+    environment:
+      - NLTK_DATA=/app/bin/nltk_data/      
     env_file: .env
     links:
       - mongo
