--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,14 +35,14 @@ services:
       - mongo
     depends_on:
       - mongo
-  fetcher:
-    image: ampsersandlabs/houdini-fetcher
-    build: .
-    command: python houdini/fetch_data.py
-    volumes:
-      - .:/app
-    env_file: .env
-    links:
-      - mongo
-    depends_on:
-      - mongo
+  # fetcher:
+  #   image: ampsersandlabs/houdini-fetcher
+  #   build: .
+  #   command: python houdini/fetch_data.py
+  #   volumes:
+  #     - .:/app
+  #   env_file: .env
+  #   links:
+  #     - mongo
+  #   depends_on:
+  #     - mongo
